--- a/Example/Podfile
+++ b/Example/Podfile
@@ -3,9 +3,9 @@ platform :ios, '8.0'
 target 'EasyReact_Example' do
   use_frameworks!
   pod 'EasyReact', :path => '../'
+  pod 'Masonry'
   target 'EasyReact_Tests' do
     inherit! :search_paths
-    
     pod 'Quick'
     pod 'Nimble'
     pod 'OCMockito'
